Finished invoice calculation

--- a/PerformanceBiller.Tests/PerformanceBiller.Tests.csproj
+++ b/PerformanceBiller.Tests/PerformanceBiller.Tests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PerformanceBiller.Infra\PerformanceBiller.Infra.csproj" />
     <ProjectReference Include="..\PerformanceBiller\PerformanceBiller.csproj" />
   </ItemGroup>
 
